Document viewer fixed to work on mobile browser also

--- a/client/src/DocumentViewer.scss
+++ b/client/src/DocumentViewer.scss
@@ -1,9 +1,12 @@
 .documentViewer{
     width: 100%;
-    height: 100vh;
+    height: 94.5vh;
     background-color: white;
+    overflow-y: scroll;
+    overflow-x: scroll;
     &__document{
-        width:100%;
-        height: 94.5vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
